# capevm-rust

.devcontainer/: Dockerfile  devcontainer.json
capevm/: Cargo.toml  README.md  build.rs  vm-config.toml
capevm/.cargo/: config.toml
capevm/avr-specs/: avr-atmega128.json  avr-atmega1280.json  avr-atmega168.json  avr-atmega2560.json  avr-atmega328p.json  avr-atmega32u4.json  avr-atmega48p.json  avr-attiny85.json  avr-attiny88.json
capevm/src/: avrora.rs  main.rs
capevm/src/components/: mod.rs
capevm/src/components/jvm/: mod.rs
capevm/src/components/uart/: mod.rs
capevm/src/heap/: gc.rs  iterators.rs  macros.rs  mod.rs
capevm/src/plugins/: mod.rs
capevm/src/plugins/jvm/: mod.rs
capevm/src/tests/: heap.rs  jvm.rs  mod.rs
